Add AOT and native image support (#794)